--- a/src/app/advert-detail/advert-detail.component.scss
+++ b/src/app/advert-detail/advert-detail.component.scss
@@ -84,3 +84,9 @@
   .demo:hover {
     opacity: 1;
   }
+
+  div.card {
+    width: 250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+  }
